image update index

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 						  <!-- <p class="flex-caption">Trinity College Dublin</p> -->
 					    </li>
 					    <li>
-					      <img src="img/dummies/mig.png" alt="alt text" />
+					      <img src="img/slides/Experiment.png" alt="alt text" />
 					      <!-- <p class="flex-caption">3D Rhino, Graphics module, 2014</p> -->
 					    </li>
 					    <!-- <li>
