--- a/publication.html
+++ b/publication.html
@@ -176,25 +176,25 @@
 			
 	<!-- floated content -->
 					<div class="floated-content">			
+					<h2>List of Publications</h2>
 					<h4>Journals </h4>
 <p></p>
-<p>Zibrek, K., Kokkinara, E., & McDonnell, R. (2018). The Effect of Realistic Appearance of Virtual Characters in Immersive Environments-Does the Character's Personality Play a Role?. IEEE transactions on visualization and computer graphics, 24(4), 1681-1690. (Impact factor: 3.078 in 2017)</p>
-
-<p>Zibrek, K., Hoyet, L., Ruhland, K., & McDonnell, R. (2015). Exploring the effect of motion type and emotions on the perception of gender in virtual humans. ACM Transactions on Applied Perception, 12(3), 11. (Impact factor 0.561 in 2015)</p>
-
-
-<p>Wisessing, P., Zibrek, K., Cunningham, D. W., Dingliana, J., & McDonnell, R. (2020). Enlighten Me: Importance of Brightness and Shadow for Character Emotion and Appeal. ACM Transactions on Graphics (TOG), 39(3), 1-12. (Impact factor: 4.384 in 2017)
+<p>Wisessing, P., Zibrek, K., Cunningham, D. W., Dingliana, J., & McDonnell, R. (2020). Enlighten Me: Importance of Brightness and Shadow for Character Emotion and Appeal. ACM Transactions on Graphics (TOG), 39(3), 1-12.
 </p>
 
-<p>Zell, E. Aliaga, C., Jarabo, A., Zibrek, K., McDonnell, R., Gutierrez, D., and Botsch, M. (2015). To Stylize or not to Stylize? The Eﬀect of Shape and Material Stylisation on the Perception of Computer-Generated Faces. In ACM Transactions on Graphics – Proceedings of ACM SIGGRAPH Asia 2015, 184:1–184:12. (Impact factor 4.218 in 2015)
+<p>Zibrek, K., Kokkinara, E., & McDonnell, R. (2018). The Effect of Realistic Appearance of Virtual Characters in Immersive Environments-Does the Character's Personality Play a Role?. IEEE transactions on visualization and computer graphics, 24(4), 1681-1690.</p>
+
+<p>Zibrek, K., Hoyet, L., Ruhland, K., & McDonnell, R. (2015). Exploring the effect of motion type and emotions on the perception of gender in virtual humans. ACM Transactions on Applied Perception, 12(3), 11.</p>
+
+<p>Zell, E. Aliaga, C., Jarabo, A., Zibrek, K., McDonnell, R., Gutierrez, D., and Botsch, M. (2015). To Stylize or not to Stylize? The Eﬀect of Shape and Material Stylisation on the Perception of Computer-Generated Faces. In ACM Transactions on Graphics – Proceedings of ACM SIGGRAPH Asia 2015, 184:1–184:12.
 </p>
 
-<p>Hoyet, L., Ryall, K., Zibrek, K., Park, H., Lee, J, Hodgins, J., O’Sullivan, C. (2013). Evaluating the distinctiveness and attractiveness of human motions on realistic virtual bodies. In ACM Transactions on Graphics (TOG) – Proceedings of ACM SIGGRAPH Asia 2013, 204:1–204:11. (Impact factor: 4.28 in 2013)
+<p>Hoyet, L., Ryall, K., Zibrek, K., Park, H., Lee, J, Hodgins, J., O’Sullivan, C. (2013). Evaluating the distinctiveness and attractiveness of human motions on realistic virtual bodies. In ACM Transactions on Graphics (TOG) – Proceedings of ACM SIGGRAPH Asia 2013, 204:1–204:11.
 </p>
 
 <h4>Conferences </h4> 
 <p></p>
-<p>Zibrek, K., & McDonnell, R. (2019). Social presence and place illusion are affected by photorealism in embodied VR. In Motion, Interaction and Games (pp. 1-7).
+<p>Zibrek, K., & McDonnell, R. (2019). Social presence and place illusion are affected by photorealism in embodied VR. In Motion, Interaction and Games(pp. 1-7).
 </p>
 
 <p>Zibrek, K., Kokkinara, E., and McDonnell, R. (2017). Don’t Stand So Close To me: Investigating the Effect of Control on the Appeal of Virtual Humans Using Immersion and a Proximity-based Behavioural Task. Proceedings of the ACM Symposium on Applied Perception,  3:1 - 3:11. 
@@ -240,7 +240,7 @@
 					<article class="format-standard">
 					
 					
-
+					<h2>Full Papers and Supplementary Material</h2>
 
 							<div class="feature-image">
 							<img src="img/dummies/Expressions.png" />
