--- a/publication.html
+++ b/publication.html
@@ -241,7 +241,8 @@
 					
 					<p>  </p>
 					<p>  </p>
-					<h2>Full Papers and Supplementary Material</h2>
+					<p>  </p>
+					<h2>Full Text/Supplementary</h2>
 					<p>  </p>
 
 							<div class="feature-image">
