--- a/publication.html
+++ b/publication.html
@@ -180,6 +180,7 @@
 					<p>  </p>
 					<h4>Journals </h4>
 <p></p>
+<p>Zibrek, K., Niay, B., Olivier, A. H., Hoyet, L., Pettré, J., & Mcdonnell, R. (2020). The effect of gender and attractiveness of motion on proximity in virtual reality. ACM Transactions on Applied Perception (TAP), 17(4), 1-15.</p>
 <p>Wisessing, P., Zibrek, K., Cunningham, D. W., Dingliana, J., & McDonnell, R. (2020). Enlighten Me: Importance of Brightness and Shadow for Character Emotion and Appeal. ACM Transactions on Graphics (TOG), 39(3), 1-12.
 </p>
 
