--- a/publication.html
+++ b/publication.html
@@ -247,7 +247,7 @@
 					<p>  </p>
 					
 						<div class="feature-image">
-							<img src="img/dummies/.png" />
+							<img src="img/dummies/grproximity.png" />
 						</div>
 						<h4>The effect of gender and attractiveness of motion on proximity in virtual reality</h4><br>
 						<h6>Transactions on Applied Perception 2020</h6>
