--- a/publication.html
+++ b/publication.html
@@ -176,7 +176,7 @@
 			
 	<!-- floated content -->
 					<div class="floated-content">			
-					<h2>List of Publications (Full text and supplementary below)</h2>
+					<h2>List of Publications</h2>
 					<p>  </p>
 					<h4>Journals </h4>
 <p></p>
