--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ padding: 10px;
 <body>
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#">About</a>
-  <a href="#">Publications</a>
+  <a class="active" href="index.html">Home</a>
+  <a href="About.html">About</a>
+  <a href="publications.html">Publications</a>
   <s class="social" href="https://twitter.com/KatjaZia"><img src="img/twitter.png"></s>
   <s class="social" href="https://twitter.com/KatjaZia"><img src="img/twitter.png"></s>
 </div>
