--- a/About.html
+++ b/About.html
@@ -74,9 +74,9 @@ padding: 70px 5px 5px 5px;
 <body>
 
 <div class="topnav">
-  <a href="#home">Home</a>
-  <a class="active" href="#">About</a>
-  <a href="#">Publications</a>
+  <a href="index.html">Home</a>
+  <a class="active" href="About.html">About</a>
+  <a href="publications.html">Publications</a>
   <s class="social" href="https://twitter.com/KatjaZia"><img src="img/twitter.png"></s>
   <s class="social" href="https://twitter.com/KatjaZia"><img src="img/twitter.png"></s>
 </div>
