--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
 .topnav s {
 float: right;
 text-align: center;
-padding: 10px;
+padding: 10px 0px 0px 0px;
 }
 
 .active {
@@ -95,7 +95,7 @@ padding: 10px;
 
 <div class="content">
   <!-- <h2>Gender of motion and proximity</h2> -->
- <a href="http://files.inria.fr/vhcie/index.html"><img src="img/VHCIE.png" width="624" height="300"></a>
+ <img src="img/VHCIE.png" width="624" height="300">
   <p>We are hosting the VHCIE workshop at IEEEVR 2021.</p>
 </div>
 
