--- a/publications.html
+++ b/publications.html
@@ -84,9 +84,9 @@ padding: 0px 20px 0px 0px;
 <body>
 
 <div class="topnav">
-  <a href="#home">Home</a>
-  <a href="#">About</a>
-  <a class="active" href="#">Publications</a>
+  <a href="index.html">Home</a>
+  <a href="About.html">About</a>
+  <a class="active" href="publications.html">Publications</a>
   <s class="social" href="https://twitter.com/KatjaZia"><img src="img/twitter.png"></s>
   <s class="social" href="https://twitter.com/KatjaZia"><img src="img/twitter.png"></s>
 </div>
