--- a/About.html
+++ b/About.html
@@ -88,7 +88,7 @@ line-height: 0.5;
   <a href="index.html">HOME</a>
   <a class="active" href="About.html">ABOUT</a>
   <a href="publications.html">PUBLICATIONS</a>
-  <s class="social" href="https://twitter.com/KatjaZia"><img src="img/Twitt.png"></s>
+  <s href="https://twitter.com/KatjaZia"><img src="img/Twitt.png"></s>
   <s class="social" href=""><img src="img/youtube.png"></s>
 </div>
 
