nav line change

--- a/About.html
+++ b/About.html
@@ -23,6 +23,7 @@ body {
 .topnav {
   overflow: hidden;
   background-color: #333;
+  padding: 0px 100px 0px 200px;
 }
 
 /* Style the topnav links */
@@ -42,7 +43,7 @@ body {
   color: black;
 }
 
-.topnav s {
+.topnav s{
 float: right;
 text-align: center;
 padding: 10px 10px 0px 0px;
@@ -89,7 +90,7 @@ line-height: 0.5;
   <a class="active" href="About.html">ABOUT</a>
   <a href="publications.html">PUBLICATIONS</a>
   <s href="https://twitter.com/KatjaZia"><img src="img/Twitt.png"></s>
-  <s class="social" href=""><img src="img/youtube.png"></s>
+  <s href=""><img src="img/youtube.png"></s>
 </div>
 
 
