--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@ padding: 0px 50px 50px 0px;
 
 <div class="content">
 <!--	<div class="headline">
-	<h2><span class="a">NEWS</span></h2>
-    <p> I try to update my latest activity as best as I can. Sometimes things are not completely up to date.</p>
-	</div>   -->
+	<h2><span class="a">NEWS</span></h2> -->
+    <p> This site is still a bit wonky becasue it is under construction. It will get better, I promise.</p>
+	</div>  
   
   
   	<div class="date">
