--- a/About.html
+++ b/About.html
@@ -75,6 +75,31 @@ p.small {
 line-height: 0.5;
 }
 
+
+/* Style the table */
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#customers td, #customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ff2052;
+  color: white;
+}
+
 /* Style the footer */
 .footer {
   background-color: #f1f1f1;
@@ -96,7 +121,8 @@ line-height: 0.5;
 
 <div class="content">
 	<a class="picture"><img src="img/me5.png" width="225" height="246"></a>
-    <h4>Katja Zibrek, MSc Psychology, PhD Computer Science </h4>
+    <h4>Katja Zibrek </h4>
+	<h5>MSc Psychology, PhD Computer Science </h5>
     <p> I currently hold a starting research position at the MimeTic team, Inria Rennes, France. My main area of investigation are virtual humans, in particular, how appearance realism of virtual characters guides the perception and behaviour of the viewer. I frequently use virtual reality (VR) to study behavioral responses to characters so a good deal of my work is in VR.</p>
 
 
@@ -108,6 +134,25 @@ line-height: 0.5;
 <h4>Address</h4>
 <p class="small">Campus de Beaulieu</p>
 <p class="small">35042 Rennes Cedex, France</p>
+
+<h4>Short CV</h4>
+<table id="customers">
+  <tr>
+    <th>Dates</th>
+    <th>Position</th>
+    <th>Institution</th>
+  </tr>
+  <tr>
+    <td>01/02/2020 - </td>
+    <td>Starting Research Position</td>
+    <td>Inria, Rennes, France</td>
+  </tr>
+    <tr>
+    <td>01/11/2016 – 31/12/2019</td>
+    <td>Postdoctoral researcher</td>
+    <td>Trinity College Dublin, Ireland</td>
+  </tr>
+  </table>
 
 </div> 
 <div class="footer">
