--- a/About.html
+++ b/About.html
@@ -80,7 +80,7 @@ line-height: 0.5;
 #customers {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 70%;
 }
 
 #customers td, #customers th {
@@ -136,6 +136,7 @@ line-height: 0.5;
 <p class="small">35042 Rennes Cedex, France</p>
 
 <h4>Short CV</h4>
+<h5>Professional experience</h5>
 <table id="customers">
   <tr>
     <th>Dates</th>
@@ -153,6 +154,54 @@ line-height: 0.5;
     <td>Trinity College Dublin, Ireland</td>
   </tr>
   </table>
+<h5>Education</h5>
+<table id="customers">
+  <tr>
+    <th>Dates</th>
+    <th>Level</th>
+    <th>Institution</th>
+  </tr>
+  <tr>
+    <td>01/03/2013 – 17/06/2017</td>
+    <td>Doctorate Computer Science</td>
+    <td>School of Computer Science and Statistics, Trinity College Dublin, Ireland</td>
+  </tr>
+    <tr>
+    <td>01/09/2004 – 16/06/2010</td>
+    <td>Diploma (B.Sc. + M.Sc.)in Psychology</td>
+    <td>Department of Psychology, University of Ljubljana, Slovenia</td>
+  </tr>
+  </table>
+
+<h5>Awards</h5>
+
+<table id="customers">
+  <tr>
+    <th>Award</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>Best paper awards </td>
+    <td>Title: ‘’Investigating perceptually based models to predict importance of facial blendshapes’’ Granted by: Motion, Interaction and Games conference, on 18th October 2020.
+	</br>Title: “Is photorealism important for perception of expressive virtual humans in VR?” Granted by: Symposium on Applied Perception, on 20th September 2019.
+	</td>
+  </tr>
+    
+  <tr>
+    <td>Best presentation award </td>
+    <td>Title: “Exploring the effect of emotions on gender perception”, granted by: Symposium on Applied Perception, on 23rd August 2013; award prize: €75.
+	</td>
+  </tr>
+  
+  <tr>
+    <td>“Presern award” Faculty award for  exceptional/innovative diploma thesis</td>
+    <td>Title: “The influence of the virtual environment on the emotional state and the feeling of presence in this environment”, granted by: Univerza v Ljubljani, on 2nd December 2010; award prize: €80
+	</td>
+  </tr>
+  
+  
+  </table>
+
 
 </div> 
 <div class="footer">
