--- a/About.html
+++ b/About.html
@@ -81,6 +81,8 @@ line-height: 0.5;
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 70%;
+  font-style: normal;
+  font-size:12px;
 }
 
 #customers td, #customers th {
