--- a/About.html
+++ b/About.html
@@ -137,6 +137,9 @@ line-height: 0.5;
 <p class="small">Campus de Beaulieu</p>
 <p class="small">35042 Rennes Cedex, France</p>
 
+
+<p></p>
+<p></p>
 <h4>Short CV</h4>
 <h5>Professional experience</h5>
 <table id="customers">
@@ -170,7 +173,7 @@ line-height: 0.5;
   </tr>
     <tr>
     <td>01/09/2004 – 16/06/2010</td>
-    <td>Diploma (B.Sc. + M.Sc.)in Psychology</td>
+    <td>Diploma (B.Sc. + M.Sc.) Psychology</td>
     <td>Department of Psychology, University of Ljubljana, Slovenia</td>
   </tr>
   </table>
