--- a/About.html
+++ b/About.html
@@ -128,84 +128,85 @@ line-height: 0.5;
     <p> I currently hold a starting research position at the MimeTic team, Inria Rennes, France. My main area of investigation are virtual humans, in particular, how appearance realism of virtual characters guides the perception and behaviour of the viewer. I frequently use virtual reality (VR) to study behavioral responses to characters so a good deal of my work is in VR.</p>
 
 
-<h4>Contact</h4>
-<p class="small">Dr. Katja Zibrek</p>
-<p class="small">Inria, MimeTIC team</p>
-<p class="small">E-mail: katja.zibrek@inria.fr</p>
+	<h4>Contact</h4>
+	<p class="small">Dr. Katja Zibrek</p>
+	<p class="small">Inria, MimeTIC team</p>
+	<p class="small">E-mail: katja.zibrek@inria.fr</p>
 
-<h4>Address</h4>
-<p class="small">Campus de Beaulieu</p>
-<p class="small">35042 Rennes Cedex, France</p>
+	<h4>Address</h4>
+	<p class="small">Campus de Beaulieu</p>
+	<p class="small">35042 Rennes Cedex, France</p>
 
+</div> 
 
-<p></p>
-<p></p>
-<h4>Short CV</h4>
-<h5>Professional experience</h5>
-<table id="customers">
-  <tr>
-    <th>Dates</th>
-    <th>Position</th>
-    <th>Institution</th>
-  </tr>
-  <tr>
-    <td>01/02/2020 - </td>
-    <td>Starting Research Position</td>
-    <td>Inria, Rennes, France</td>
-  </tr>
-    <tr>
-    <td>01/11/2016 – 31/12/2019</td>
-    <td>Postdoctoral researcher</td>
-    <td>Trinity College Dublin, Ireland</td>
-  </tr>
+<div class="content">
+	<h4>Short CV</h4>
+	<h5>Professional experience</h5>
+	<table id="customers">
+	<tr>
+		<th>Dates</th>
+		<th>Position</th>
+		<th>Institution</th>
+	</tr>
+	<tr>
+		<td>01/02/2020 - </td>
+		<td>Starting Research Position</td>
+		<td>Inria, Rennes, France</td>
+	</tr>
+		<tr>
+		<td>01/11/2016 – 31/12/2019</td>
+		<td>Postdoctoral researcher</td>
+		<td>Trinity College Dublin, Ireland</td>
+	</tr>
   </table>
-<h5>Education</h5>
-<table id="customers">
-  <tr>
-    <th>Dates</th>
-    <th>Level</th>
-    <th>Institution</th>
-  </tr>
-  <tr>
-    <td>01/03/2013 – 17/06/2017</td>
-    <td>Doctorate Computer Science</td>
-    <td>School of Computer Science and Statistics, Trinity College Dublin, Ireland</td>
-  </tr>
-    <tr>
-    <td>01/09/2004 – 16/06/2010</td>
-    <td>Diploma (B.Sc. + M.Sc.) Psychology</td>
-    <td>Department of Psychology, University of Ljubljana, Slovenia</td>
-  </tr>
-  </table>
-
-<h5>Awards</h5>
-
-<table id="customers">
-  <tr>
-    <th>Award</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td>Best paper awards </td>
-    <td>Title: ‘’Investigating perceptually based models to predict importance of facial blendshapes’’ Granted by: Motion, Interaction and Games conference, on 18th October 2020.
-	</br>Title: “Is photorealism important for perception of expressive virtual humans in VR?” Granted by: Symposium on Applied Perception, on 20th September 2019.
-	</td>
-  </tr>
+	
+	<h5>Education</h5>
+	<table id="customers">
+	<tr>
+		<th>Dates</th>
+		<th>Level</th>
+		<th>Institution</th>
+	</tr>
+  
+	<tr>
+		<td>01/03/2013 – 17/06/2017</td>
+		<td>Doctorate Computer Science</td>
+		<td>School of Computer Science and Statistics, Trinity College Dublin, Ireland</td>
+	</tr>
     
-  <tr>
-    <td>Best presentation award </td>
-    <td>Title: “Exploring the effect of emotions on gender perception”, granted by: Symposium on Applied Perception, on 23rd August 2013; award prize: €75.
-	</td>
-  </tr>
+	<tr>
+		<td>01/09/2004 – 16/06/2010</td>
+		<td>Diploma (B.Sc. + M.Sc.) Psychology</td>
+		<td>Department of Psychology, University of Ljubljana, Slovenia</td>
+	</tr>
+	</table>
+
+	<h5>Awards</h5>
+
+	<table id="customers">
+	<tr>
+		<th>Award</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td>Best paper awards </td>
+		<td>Title: ‘’Investigating perceptually based models to predict importance of facial blendshapes’’ Granted by: Motion, Interaction and Games conference, on 18th October 2020.
+		</br>Title: “Is photorealism important for perception of expressive virtual humans in VR?” Granted by: Symposium on Applied Perception, on 20th September 2019.
+		</td>
+	</tr>
+    
+	<tr>
+		<td>Best presentation award </td>
+		<td>Title: “Exploring the effect of emotions on gender perception”, granted by: Symposium on Applied Perception, on 23rd August 2013; award prize: €75.
+		</td>
+	</tr>
   
-  <tr>
-    <td>“Presern award” Faculty award for  exceptional/innovative diploma thesis</td>
-    <td>Title: “The influence of the virtual environment on the emotional state and the feeling of presence in this environment”, granted by: Univerza v Ljubljani, on 2nd December 2010; award prize: €80
-	</td>
-  </tr>
-  
-  
-  </table>
+	<tr>
+		<td>“Presern award” Faculty award for  exceptional/innovative diploma thesis</td>
+		<td>Title: “The influence of the virtual environment on the emotional state and the feeling of presence in this environment”, granted by: Univerza v Ljubljani, on 2nd December 2010; award prize: €80
+		</td>
+	</tr>
+	</table>
 
 
 </div> 
