--- a/About.html
+++ b/About.html
@@ -83,6 +83,8 @@ line-height: 0.5;
   width: 70%;
   font-style: normal;
   font-size:12px;
+  display: inline-block;
+  padding: 100px;
 }
 
 #customers td, #customers th {
@@ -137,12 +139,12 @@ line-height: 0.5;
 	<p class="small">Campus de Beaulieu</p>
 	<p class="small">35042 Rennes Cedex, France</p>
 
-</div> 
 
-<div class="content">
+
+<table id="customers">
 	<h4>Short CV</h4>
 	<h5>Professional experience</h5>
-	<table id="customers">
+	
 	<tr>
 		<th>Dates</th>
 		<th>Position</th>
