--- a/About.html
+++ b/About.html
@@ -88,12 +88,10 @@ line-height: 0.5;
 
 #customers td, #customers th {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 8px 80px 8px 8px;
 }
 
 #customers tr:nth-child(even){background-color: #f2f2f2;}
-
-#customers tr:hover {background-color: #ddd;}
 
 #customers th {
   padding-top: 12px;
