--- a/About.html
+++ b/About.html
@@ -88,7 +88,7 @@ line-height: 0.5;
 
 #customers td, #customers th {
   border: 1px solid #ddd;
-  padding: 8px 80px 8px 8px;
+  padding: 8px;
 }
 
 #customers tr:nth-child(even){background-color: #f2f2f2;}
@@ -169,7 +169,7 @@ line-height: 0.5;
 	</tr>
   
 	<tr>
-		<td>2013 – 2017</td>
+		<td>2013 –  2017</td>
 		<td>Doctorate Computer Science</td>
 		<td>School of Computer Science and Statistics, Trinity College Dublin, Ireland</td>
 	</tr>
