--- a/index.html
+++ b/index.html
@@ -164,6 +164,18 @@ padding: 0px 50px 50px 0px;
 	 
   
   
+  
+	<div class="date">
+	<h3><span class="line-center">MARCH 2021</span></h3>
+	</div> 
+	 
+		<div class="inside">
+			<a class="pictures"><img src="img/msca.png" width="309" height="100"></a> 
+			<p>My EU project under the Marie Sklodowska Curie Individual Fellowship actions will be funded! The "ForEVR" project will explore the posibilities of manipulating motion of virtual characters in virtual reality to affect user's perception. More coming soon!</p>
+			<a href="https://sap.acm.org/" class="button">Website</a>
+			
+			
+		</div> 
   	<div class="date">
 	<h3><span class="line-center">FEBRUARY 2021</span></h3>
 	</div> 
