--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ padding: 0px 50px 50px 0px;
 	</div> 
 	 
 		<div class="inside">
-			<a class="pictures"><img src="img/msca.png"></a> 
+			<a class="pictures"><img src="img/msca.png"width="309" height="100"></a> 
 			<p>My EU project under the Marie Sklodowska Curie Individual Fellowship actions will be funded! The "ForEVR" project will explore the posibilities of manipulating motion of virtual characters in virtual reality to affect user's perception. More coming soon!</p>
 			<!--<a href="https://sap.acm.org/" class="button">Website</a>-->
 			
