--- a/About.html
+++ b/About.html
@@ -97,7 +97,7 @@ line-height: 0.5;
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #f2f2f2;
+  background-color: #333;
   color: white;
 }
 
