--- a/About.html
+++ b/About.html
@@ -101,11 +101,6 @@ line-height: 0.5;
   color: white;
 }
 
-.line-center{
-    margin:0;padding:0 10px;
-    background:#fff;
-    display:inline-block;
-}
 
 /* Style the footer */
 .footer {
@@ -144,7 +139,7 @@ line-height: 0.5;
 
 
 	<h3>   </h3>
-	<h4><span class="line-center">Short CV</span></h4>
+	<h4>Short CV</span></h4>
 	<h5>Professional experience</h5>
 
 <table id="customers">
