--- a/publications.html
+++ b/publications.html
@@ -142,6 +142,10 @@ padding: 0px 20px 0px 0px;
 	<a class="pictures"><img src="img/Expressions.png" width="100" height="50"></a>	   
     <p> Wisessing, P., Zibrek, K., Cunningham, D. W., Dingliana, J., & McDonnell, R. (2020). Enlighten Me: Importance of Brightness and Shadow for Character Emotion and Appeal. ACM Transactions on Graphics (TOG), 39(3), 1-12.</p>
 	<p><a class="pdf" href="https://dl.acm.org/doi/pdf/10.1145/3383195">LINK</a></p>
+	
+	<a class="pictures"><img src="img/PhotorealismSG.png" width="100" height="50"></a>	   
+    <p> Zibrek, K., Martin, S., McDonnell, R. (2019). Is photorealism important for perception of expressive virtual humans in virtual reality?. ACM Transactions on Applied Perception (TAP), 16(3), 1-19.</p>
+	<p><a class="pdf" href="https://www.scss.tcd.ie/~ramcdonn/papers/TAP2019.pdf">LINK</a></p>
 
 	<a class="pictures"><img src="img/TVCG.png" width="100" height="50"></a>	   
     <p> Zibrek, K., Kokkinara, E., & McDonnell, R. (2018). The Effect of Realistic Appearance of Virtual Characters in Immersive Environments-Does the Character's Personality Play a Role?. IEEE transactions on visualization and computer graphics, 24(4), 1681-1690.</p>
@@ -163,9 +167,21 @@ padding: 0px 20px 0px 0px;
 	<div class="header">
 	<h3><span class="line-center">Conferences</span></h3>
 	</div>
+	
+	<a class="pictures"><img src="img/SettingVR.png" width="100" height="50"></a>	   
+    <p>Duverné, T., Rougnant, T., Le Yondre, F., Berton, F., Bruneau, J., Zibrek, K., Pettré, J., Hoyet, L., Olivier, AH. (2020). Effect of Social Settings on Proxemics During Social Interactions in Real and Virtual Conditions. International Conference on Virtual Reality and Augmented Reality, 3-19.</p>
+	<a class="pdf" href="http://people.rennes.inria.fr/Ludovic.Hoyet/Documents/Articles/2020_EuroVR_Social.pdf">LINK</a></p>
+	
+	<a class="pictures"><img src="img/Blendsh.png" width="100" height="50"></a>	   
+    <p>Carrigan, E., Zibrek, K., Dahyot, R., McDonnell, R. (2020). Investigating perceptually based models to predict importance of facial blendshapes. Motion, Interaction and Games, 1-6.</p>
+	<a class="pdf" href="https://dl.acm.org/doi/abs/10.1145/3424636.3426904">LINK</a></p>
+
+	<a class="pictures"><img src="img/WalkThis.png" width="100" height="50"></a>	   
+    <p>Niay, B., Olivier, AH., Zibrek, K., Pettré, J., Hoyet, L. (2020). Walk Ratio: Perception of an Invariant Parameter of Human Walk on Virtual Characters. ACM Symposium on Applied Perception 2020, 1-9.</p>
+	<a class="pdf" href="https://hal.inria.fr/hal-03009041/file/SAP_2020_Perception_WR.pdf">PDF</a></p>
 
 	<a class="pictures"><img src="img/mig.png" width="100" height="50"></a>	   
-    <p>Zibrek, K., & McDonnell, R. (2019). Social presence and place illusion are affected by photorealism in embodied VR. In Motion, Interaction and Games (pp. 1-7).</p>
+    <p>Zibrek, K., & McDonnell, R. (2019). Social presence and place illusion are affected by photorealism in embodied VR. In Motion, Interaction and Games, 1-7.</p>
 	<a class="pdf" href="img/a13-zibrek.pdf">PDF</a></p>
 
 
