--- a/About.html
+++ b/About.html
@@ -112,6 +112,8 @@ line-height: 0.5;
 </head>
 <body>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <div class="topnav">
   <a href="index.html">HOME</a>
   <a class="active" href="About.html">ABOUT</a>
