--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@ padding: 10px 10px 0px 0px;
 /* Style the content */
 .content {
   background-color: white;
-  padding: 100px 200px 100px 200px;
+  margin: 100px 200px 100px 200px;
   /*height: 200px; /* Should be removed. Only for demonstration */
 }
 
@@ -110,7 +110,6 @@ line-height: 0.5;
 
 </style>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
 
 <div class="topnav">
