--- a/About.html
+++ b/About.html
@@ -46,7 +46,7 @@ body {
 .topnav s{
 float: right;
 text-align: center;
-padding: 10px 10px 0px 0px;
+margin: 10px 10px 0px 0px;
 }
 
 .active {
@@ -63,7 +63,7 @@ padding: 10px 10px 0px 0px;
 
 .picture {
 float: right;
-padding: 10px 50px 5px 50px;
+margin: 10px 50px 5px 50px;
 }
 
 p {
