changes to Index
changes

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -25,11 +25,12 @@ p {
 }
 
 
+
 /* Style the top navigation bar */
 .topnav {
   overflow: hidden;
   background-color: #333;
-  padding: 0px 50px 0px 20px;
+  padding: 0px 100px 0px 200px;
 }
 
 /* Style the topnav links */
@@ -65,7 +66,7 @@ padding: 10px 10px 0px 0px;
 }
 
 .line-center{
-    margin:0;padding:50px 10px; 
+    margin:0;padding:0 10px;
     background:#fff;
     display:inline-block;
 }
@@ -103,7 +104,7 @@ span.a {
 
 .pictures {
 float: left;
-padding: 0px 50px 20px 0px;
+padding: 0px 50px 50px 0px;
 }
 
 
@@ -111,16 +112,16 @@ padding: 0px 50px 20px 0px;
 /* Style the content */
 .content {
   background-color: white;
-  padding: 10px 50px 100px 20px;
+  padding: 100px 500px 100px 200px;
   font-family: "Hind Siliguri", Verdana, sans-serif;
   /*height: 200px; /* Should be removed. Only for demonstration */
 }
 
 .inside {
   padding: 20px 20px 10px 20px;
+  height: 200px; 
   border-color: #ff2052;
   font-family: "Hind Siliguri", Verdana, sans-serif;
-
 }
 
 .button {
@@ -141,30 +142,8 @@ padding: 0px 50px 20px 0px;
 /* Style the footer */
 .footer {
   background-color: #f1f1f1;
-  padding: 150px 20px 200px 50px;
+  padding: 10px 50px;
 }
-
-/* For mobile phones: */
-[class*="col-"] {
-  width: 100%;
-}
-
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-}
-
 
 </style>
 </head>
@@ -186,23 +165,22 @@ padding: 0px 50px 20px 0px;
   
   
   
-	<div class="col-9 date">
+	<div class="date">
 	<h3><span class="line-center">MARCH 2021</span></h3>
 	</div> 
-		
-		<div class="col-9 inside">
+	 
+		<div class="inside">
 			<a class="pictures"><img src="img/msca.png"width="309" height="145"></a> 
 			<p>My EU project under the Marie Sklodowska Curie Individual Fellowship actions will be funded! The "ForEVR" project will explore the posibilities of manipulating motion of virtual characters in virtual reality to affect user's perception. More coming soon!</p>
 			<!--<a href="https://sap.acm.org/" class="button">Website</a>-->
 			
 			
 		</div> 
-		
-  	<div class="col-9 date">
+  	<div class="date">
 	<h3><span class="line-center">FEBRUARY 2021</span></h3>
 	</div> 
 	 
-		<div class="col-9 inside">
+		<div class="inside">
 			<a class="pictures"><img src="img/SAP2021.png" width="309" height="100"></a> 
 			<p>Symposium on Applied Perception will be hosted in Rennes, France this year (16-17 September, 2021). We are hoping to organise a hybrid confernece, with in-person and online attendance.</p>
 			<a href="https://sap.acm.org/" class="button">Website</a>
@@ -210,12 +188,12 @@ padding: 0px 50px 20px 0px;
 			
 		</div> 
      
-	<div class="col-9 date">
+	<div class="date">
 	<h3><span class="line-center">JANUARY 2021</span></h3>
 	</div> 
 	 
-		<div class="col-9 inside">
-			<a class="pictures"><img src="img/VHCIE.png" width="309" height="145"></a> 
+		<div class="inside">
+			<a class="pictures"><img src="img/VHCIE.png" width="309" height="150"></a> 
 			<p>We are hosting an online workshop at IEEEVR 2021 titled: Virtual Humans and Crowds in Immersive Environments. See website for more information. </p>
 			<a href="http://files.inria.fr/vhcie/index.html" class="button">Website</a>
 			
@@ -223,21 +201,21 @@ padding: 0px 50px 20px 0px;
 		</div> 
 
 	
-	<div class="col-9 date">
+	<div class="date">
 	<h3><span class="line-center">SEPTEMBER 2020</span></h3>
 	</div>   
 	
-		<div class="col-9 inside">	
+		<div class="inside">	
 			<a class="pictures"><img src="img/GenderPrioximity.png" width="312" height="150"></a> 
 			<p>In our new paper, we investigate how gender and attractiveness observed from motion can affect peoples' proximity. It recieved "Best Paper Award" at Symposium on Applied Perception 2020.</p>
 			<a href="https://dl.acm.org/doi/pdf/10.1145/3419985?casa_token=O1-fRTvhKSQAAAAA:BqBlTWyhejvo9hu-uLnPRy_4or59FlMaZxymb1Do7XhAbk1qxrjeKarbt_GFkVHV5MgLcrKeYA" class="button">Paper</a>
 		</div> 
 	 
 	</div>
-</div>
 
-<div class="footer">  
-</div> 
+<div class="footer">
+   
+</div>
 
 </body>
 </html>
