--- a/publications - Copy.html
+++ b/publications - Copy.html
@@ -29,7 +29,7 @@ p {
 .topnav {
   overflow: hidden;
   background-color: #333;
-  padding: 0px 50px 0px 20px;
+  padding: 0px 100px 0px 200px;
 }
 
 /* Style the topnav links */
@@ -63,8 +63,7 @@ padding: 10px 10px 0px 0px;
 /* Style the content */
 .content {
   background-color: white;
-  padding: 10px 50px 50px 50px;
-  font-family: "Hind Siliguri", Verdana, sans-serif;
+  padding: 100px 300px 100px 200px;
   /*height: 200px; /* Should be removed. Only for demonstration */
 }
 
@@ -113,28 +112,7 @@ padding: 0px 20px 0px 0px;
 /* Style the footer */
 .footer {
   background-color: #f1f1f1;
-  padding: 150px 20px 200px 50px;
-}
-
-/* For mobile phones: */
-[class*="col-"] {
-  width: 100%;
-}
-
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
+  padding: 10px 50px;
 }
 
 </style>
