--- a/publications.html
+++ b/publications.html
@@ -101,9 +101,9 @@ h3:after{
 
 .pictures {
 float: left;
-padding: 10px 10px;
+padding: 10px 10px 10px 0px; 
 
-}
+} 
 
 .pdf {
 padding: 0px 20px 0px 0px;
@@ -150,114 +150,114 @@ padding: 0px 20px 0px 0px;
 </div>
 
 <div class="content">
-<div class="header">
+<div class="col-9 header">
 <h3><span class="line-center">Journals</span></h3>
 </div>
 
 
 	<a class="pictures"><img src="img/GenderPrioximity.png" width="100" height="50"></a>	   
-    <p> Zibrek, K., Niay, B., Olivier, A. H., Hoyet, L., Pettré, J., & Mcdonnell, R. (2020). The effect of gender and attractiveness of motion on proximity in virtual reality. ACM Transactions on Applied Perception (TAP), 17(4), 1-15.</p>
+    <p class="col-9"> Zibrek, K., Niay, B., Olivier, A. H., Hoyet, L., Pettré, J., & Mcdonnell, R. (2020). The effect of gender and attractiveness of motion on proximity in virtual reality. ACM Transactions on Applied Perception (TAP), 17(4), 1-15.</p>
     <p><a class="pdf" href="https://dl.acm.org/doi/pdf/10.1145/3419985?casa_token=O1-fRTvhKSQAAAAA:BqBlTWyhejvo9hu-uLnPRy_4or59FlMaZxymb1Do7XhAbk1qxrjeKarbt_GFkVHV5MgLcrKeYA">LINK</a>
     <!--<a class="pdf" href="">Video</a>-->
     </p>
 
 	<a class="pictures"><img src="img/Expressions.png" width="100" height="50"></a>	   
-    <p> Wisessing, P., Zibrek, K., Cunningham, D. W., Dingliana, J., & McDonnell, R. (2020). Enlighten Me: Importance of Brightness and Shadow for Character Emotion and Appeal. ACM Transactions on Graphics (TOG), 39(3), 1-12.</p>
+    <p class="col-9"> Wisessing, P., Zibrek, K., Cunningham, D. W., Dingliana, J., & McDonnell, R. (2020). Enlighten Me: Importance of Brightness and Shadow for Character Emotion and Appeal. ACM Transactions on Graphics (TOG), 39(3), 1-12.</p>
 	<p><a class="pdf" href="https://dl.acm.org/doi/pdf/10.1145/3383195">LINK</a></p>
 	
 	<a class="pictures"><img src="img/PhotorealismSG.png" width="100" height="50"></a>	   
-    <p> Zibrek, K., Martin, S., McDonnell, R. (2019). Is photorealism important for perception of expressive virtual humans in virtual reality?. ACM Transactions on Applied Perception (TAP), 16(3), 1-19.</p>
+    <p class="col-9"> Zibrek, K., Martin, S., McDonnell, R. (2019). Is photorealism important for perception of expressive virtual humans in virtual reality?. ACM Transactions on Applied Perception (TAP), 16(3), 1-19.</p>
 	<p><a class="pdf" href="https://www.scss.tcd.ie/~ramcdonn/papers/TAP2019.pdf">LINK</a></p>
 
 	<a class="pictures"><img src="img/TVCG.png" width="100" height="50"></a>	   
-    <p> Zibrek, K., Kokkinara, E., & McDonnell, R. (2018). The Effect of Realistic Appearance of Virtual Characters in Immersive Environments-Does the Character's Personality Play a Role?. IEEE transactions on visualization and computer graphics, 24(4), 1681-1690.</p>
+    <p class="col-9"> Zibrek, K., Kokkinara, E., & McDonnell, R. (2018). The Effect of Realistic Appearance of Virtual Characters in Immersive Environments-Does the Character's Personality Play a Role?. IEEE transactions on visualization and computer graphics, 24(4), 1681-1690.</p>
 	<p><a class="pdf" href="img/SG_experiment.pdf">PDF</a></p>
 
 	<a class="pictures"><img src="img/2Walks.png" width="100" height="50"></a>	   
-    <p>Zibrek, K., Hoyet, L., Ruhland, K., & McDonnell, R. (2015). Exploring the effect of motion type and emotions on the perception of gender in virtual humans. ACM Transactions on Applied Perception, 12(3), 11. </p>
+    <p class="col-9">Zibrek, K., Hoyet, L., Ruhland, K., & McDonnell, R. (2015). Exploring the effect of motion type and emotions on the perception of gender in virtual humans. ACM Transactions on Applied Perception, 12(3), 11. </p>
 	<p><a class="pdf" href="img/TAP2015.pdf">PDF</a></p>
 
 	<a class="pictures"><img src="img/stylise.jpg" width="100" height="50"></a>	   
-    <p>Zell, E. Aliaga, C., Jarabo, A., Zibrek, K., McDonnell, R., Gutierrez, D., and Botsch, M. (2015). To Stylize or not to Stylize? The Eﬀect of Shape and Material Stylisation on the Perception of Computer-Generated Faces. In ACM Transactions on Graphics – Proceedings of ACM SIGGRAPH Asia 2015, 184:1–184:12. </p>
+    <p class="col-9">Zell, E. Aliaga, C., Jarabo, A., Zibrek, K., McDonnell, R., Gutierrez, D., and Botsch, M. (2015). To Stylize or not to Stylize? The Eﬀect of Shape and Material Stylisation on the Perception of Computer-Generated Faces. In ACM Transactions on Graphics – Proceedings of ACM SIGGRAPH Asia 2015, 184:1–184:12. </p>
 	<a class="pdf" href="https://www.scss.tcd.ie/Rachel.McDonnell/papers/SiggraphAsia2015.pdf">LINK</a></p>
 
 	<a class="pictures"><img src="img/distinctive.png" width="100" height="50"></a>	   
-    <p>Hoyet, L., Ryall, K., Zibrek, K., Park, H., Lee, J, Hodgins, J., O’Sullivan, C. (2013). Evaluating the distinctiveness and attractiveness of human motions on realistic virtual bodies. In ACM Transactions on Graphics (TOG) – Proceedings of ACM SIGGRAPH Asia 2013, 204:1–204:11. </p>
+    <p class="col-9">Hoyet, L., Ryall, K., Zibrek, K., Park, H., Lee, J, Hodgins, J., O’Sullivan, C. (2013). Evaluating the distinctiveness and attractiveness of human motions on realistic virtual bodies. In ACM Transactions on Graphics (TOG) – Proceedings of ACM SIGGRAPH Asia 2013, 204:1–204:11. </p>
 	<a class="pdf" href="http://dl.acm.org/citation.cfm?id=2508363.2508367&coll=DL&dl=ACM&CFID=700717208&CFTOKEN=58004204">LINK</a></p>
 
 
-	<div class="header">
+	<div class="col-9 header">
 	<h3><span class="line-center">Conferences</span></h3>
 	</div>
 	
 	<a class="pictures"><img src="img/SettingVR.png" width="100" height="50"></a>	   
-    <p>Duverné, T., Rougnant, T., Le Yondre, F., Berton, F., Bruneau, J., Zibrek, K., Pettré, J., Hoyet, L., Olivier, AH. (2020). Effect of Social Settings on Proxemics During Social Interactions in Real and Virtual Conditions. International Conference on Virtual Reality and Augmented Reality, 3-19.</p>
+    <p class="col-9">Duverné, T., Rougnant, T., Le Yondre, F., Berton, F., Bruneau, J., Zibrek, K., Pettré, J., Hoyet, L., Olivier, AH. (2020). Effect of Social Settings on Proxemics During Social Interactions in Real and Virtual Conditions. International Conference on Virtual Reality and Augmented Reality, 3-19.</p>
 	<a class="pdf" href="http://people.rennes.inria.fr/Ludovic.Hoyet/Documents/Articles/2020_EuroVR_Social.pdf">LINK</a></p>
 	
 	<a class="pictures"><img src="img/Blendsh.png" width="100" height="50"></a>	   
-    <p>Carrigan, E., Zibrek, K., Dahyot, R., McDonnell, R. (2020). Investigating perceptually based models to predict importance of facial blendshapes. Motion, Interaction and Games, 1-6.</p>
+    <p class="col-9">Carrigan, E., Zibrek, K., Dahyot, R., McDonnell, R. (2020). Investigating perceptually based models to predict importance of facial blendshapes. Motion, Interaction and Games, 1-6.</p>
 	<a class="pdf" href="https://dl.acm.org/doi/abs/10.1145/3424636.3426904">LINK</a></p>
 
 	<a class="pictures"><img src="img/WalkThis.png" width="100" height="50"></a>	   
-    <p>Niay, B., Olivier, AH., Zibrek, K., Pettré, J., Hoyet, L. (2020). Walk Ratio: Perception of an Invariant Parameter of Human Walk on Virtual Characters. ACM Symposium on Applied Perception 2020, 1-9.</p>
+    <p class="col-9">Niay, B., Olivier, AH., Zibrek, K., Pettré, J., Hoyet, L. (2020). Walk Ratio: Perception of an Invariant Parameter of Human Walk on Virtual Characters. ACM Symposium on Applied Perception 2020, 1-9.</p>
 	<a class="pdf" href="https://hal.inria.fr/hal-03009041/file/SAP_2020_Perception_WR.pdf">PDF</a></p>
 
 	<a class="pictures"><img src="img/mig.png" width="100" height="50"></a>	   
-    <p>Zibrek, K., & McDonnell, R. (2019). Social presence and place illusion are affected by photorealism in embodied VR. In Motion, Interaction and Games, 1-7.</p>
+    <p class="col-6">Zibrek, K., & McDonnell, R. (2019). Social presence and place illusion are affected by photorealism in embodied VR. In Motion, Interaction and Games, 1-7.</p>
 	<a class="pdf" href="img/a13-zibrek.pdf">PDF</a></p>
 
 
 	<a class="pictures"><img src="img/Unreal.png" width="100" height="50"></a>	   
-    <p>Zibrek, K., Kokkinara, E., and McDonnell, R. (2017). Don’t Stand So Close To me: Investigating the Effect of Control on the Appeal of Virtual Humans Using Immersion and a Proximity-based Behavioural Task. Proceedings of the ACM Symposium on Applied Perception,  3:1 - 3:11.</p>
+    <p class="col-9">Zibrek, K., Kokkinara, E., and McDonnell, R. (2017). Don’t Stand So Close To me: Investigating the Effect of Control on the Appeal of Virtual Humans Using Immersion and a Proximity-based Behavioural Task. Proceedings of the ACM Symposium on Applied Perception,  3:1 - 3:11.</p>
 	<a class="pdf" href="img/SAP_2017.pdf">PDF</a></p>
 
 
 	<a class="pictures"><img src="img/2Styles.png" width="100" height="50"></a>	   
-    <p>Cabral, J. P., Cowan, B. R., Zibrek, K., & McDonnell, R. (2017). The Influence of Synthetic Voice on the Evaluation of a Virtual Character. Proc. Interspeech 2017, 229-233. </p>
+    <p class="col-6">Cabral, J. P., Cowan, B. R., Zibrek, K., & McDonnell, R. (2017). The Influence of Synthetic Voice on the Evaluation of a Virtual Character. Proc. Interspeech 2017, 229-233. </p>
 	<a class="pdf" href="https://www.researchgate.net/profile/Joao_Cabral/publication/319185048_The_Influence_of_Synthetic_Voice_on_the_Evaluation_of_a_Virtual_Character/links/59ccce26aca272bb0510fb2a/The-Influence-of-Synthetic-Voice-on-the-Evaluation-of-a-Virtual-Character.pdf">LINK</a></p>
 
 
 	<a class="pictures"><img src="img/Angieala.jpg" width="100" height="50"></a>	   
-    <p>Ruhland, K., Zibrek, K., & McDonnell, R. (2015). Perception of personality through eye gaze of realistic and cartoon models. In Proceedings of the ACM SIGGRAPH Symposium on Applied Perception, 19-23.  </p>
+    <p class="col-9">Ruhland, K., Zibrek, K., & McDonnell, R. (2015). Perception of personality through eye gaze of realistic and cartoon models. In Proceedings of the ACM SIGGRAPH Symposium on Applied Perception, 19-23.  </p>
 	<a class="pdf" href="https://www.scss.tcd.ie/Rachel.McDonnell/papers/SAP2015.pdf">LINK</a></p>
 
 
 	<a class="pictures"><img src="img/2Styles.png" width="100" height="50"></a>	   
-    <p>Zibrek, K., and McDonnell,R. (2014). Does render style aﬀect perception of personality in virtual humans? In Proceedings of the ACM Symposium on Applied Perception, 111–115. </p>
+    <p class="col-9">Zibrek, K., and McDonnell,R. (2014). Does render style aﬀect perception of personality in virtual humans? In Proceedings of the ACM Symposium on Applied Perception, 111–115. </p>
 	<a class="pdf" href="img/SAP2014.pdf">PDF</a></p>
 
 
 	<a class="pictures"><img src="img/HappyAngry.png" width="100" height="50"></a>	   
-    <p>Zibrek, K., Hoyet, L., Ruhland, K., and McDonnell, R. (2013). Evaluating the effect of emotion on gender recognition in virtual humans. In Proceedings of the ACM Symposium on Applied Perception, 45–49. </p>
+    <p class="col-9">Zibrek, K., Hoyet, L., Ruhland, K., and McDonnell, R. (2013). Evaluating the effect of emotion on gender recognition in virtual humans. In Proceedings of the ACM Symposium on Applied Perception, 45–49. </p>
 	<a class="pdf" href="img/SAP2013.pdf">PDF</a></p>
 
 
-	<div class="header">
+	<div class="col-9 header">
 	<h3><span class="line-center">Posters and Workshops</span></h3>
 	</div>
 
 
 	<a class="pictures"><img src="img/IEEEVR_1_2020.png" width="100" height="50"></a>	   
-    <p>Zibrek, K., Niay, B. Olivier, AH, Hoyet, L., Pettre, J. and McDonnell, R. (2020). Walk this way: Evaluating the effect of perceived gender and attractiveness of motion on proximity in virtual reality. 2020 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW), Atlanta, GA, USA, pp. 169-170.</p>
+    <p class="col-9">Zibrek, K., Niay, B. Olivier, AH, Hoyet, L., Pettre, J. and McDonnell, R. (2020). Walk this way: Evaluating the effect of perceived gender and attractiveness of motion on proximity in virtual reality. 2020 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW), Atlanta, GA, USA, pp. 169-170.</p>
 	<a class="pdf" href="https://ieeexplore.ieee.org/abstract/document/9090486">LINK</a></p>
 
 
 	<a class="pictures"><img src="img/IAT_Models.png" width="100" height="50"></a>	   
-    <p>Zibrek, K. and McDonnell, R. (2015). Evaluating the Uncanny Valley with the Implicit Association Test (IAT). In Proceedings of the ACM Symposium on Applied Perception, 135–135.</p>
+    <p class="col-9">Zibrek, K. and McDonnell, R. (2015). Evaluating the Uncanny Valley with the Implicit Association Test (IAT). In Proceedings of the ACM Symposium on Applied Perception, 135–135.</p>
 	<a class="pdf" href="Poster_SAP2015.pdf">PDF</a></p>
 
-	<div class="header">
+	<div class="col-9 header">
 	<h3><span class="line-center">Tutorials and courses</span></h3>
 	</div>
 
 
 	<a class="pictures"><img src="img/Eurographics_1_2020.png" width="100" height="50"></a>	   
-    <p>Zell, E., Zibrek, K., Pan, X., Gilles, M. & McDonnell, R. (2020). From perception to interaction with virtual characters. In Eurographics Tutorials (in press).</p>
+    <p class="col-6">Zell, E., Zibrek, K., Pan, X., Gilles, M. & McDonnell, R. (2020). From perception to interaction with virtual characters. In Eurographics Tutorials (in press).</p>
 	<a class="pdf" href="img/005-031.pdf">PDF</a></p>
 
 
 	<a class="pictures"><img src="img/Courses1.png" width="100" height="50"></a>	   
-    <p>Zell, E., Zibrek, K., & McDonnell, R. (2019). Perception of virtual characters. In ACM SIGGRAPH 2019 Courses (pp. 1-17).</p>
+    <p class="col-6">Zell, E., Zibrek, K., & McDonnell, R. (2019). Perception of virtual characters. In ACM SIGGRAPH 2019 Courses (pp. 1-17).</p>
 	<a class="pdf" href="img/CharacterPerceptionSIGGRAPH2019.pdf">PDF</a></p>
 
 </div>
