--- a/publications.html
+++ b/publications.html
@@ -154,6 +154,11 @@ padding: 0px 20px 0px 0px;
 <h3><span class="line-center">Journals</span></h3>
 </div>
 
+	<a class="pictures"><img src="img/CG_blend.jpg" width="100" height="50"></a>	   
+    <p class="col-9"> McDonnell, R., Zibrek, K., Carrigan, E., & Dahyot, R. (2021). Model for predicting perception of facial action unit activation using virtual humans. Computers & Graphics, 100, 81-92.</p>
+    <p><a class="pdf" href="https://www.sciencedirect.com/science/article/pii/S0097849321001631">LINK</a>
+    <!--<a class="pdf" href="">Video</a>-->
+    </p>
 
 	<a class="pictures"><img src="img/GenderPrioximity.png" width="100" height="50"></a>	   
     <p class="col-9"> Zibrek, K., Niay, B., Olivier, A. H., Hoyet, L., Pettré, J., & Mcdonnell, R. (2020). The effect of gender and attractiveness of motion on proximity in virtual reality. ACM Transactions on Applied Perception (TAP), 17(4), 1-15.</p>
@@ -189,6 +194,10 @@ padding: 0px 20px 0px 0px;
 	<div class="col-9 header">
 	<h3><span class="line-center">Conferences</span></h3>
 	</div>
+	
+	<a class="pictures"><img src="img/Observer.png" width="100" height="50"></a>	   
+    <p class="col-6">Raimbaud, P., Jovane, A., Zibrek, K., Pacchierotti, C., Christie, M., Hoyet, L., ... & Olivier, A. H. (2021, September). Reactive Virtual Agents: A Viewpoint-Driven Approach for Bodily Nonverbal Communication. In Proceedings of the 21th ACM International Conference on Intelligent Virtual Agents (pp. 164-166).</p>
+	<a class="pdf" href="https://dl.acm.org/doi/pdf/10.1145/3472306.3478351">PDF</a></p>
 	
 	<a class="pictures"><img src="img/SettingVR.png" width="100" height="50"></a>	   
     <p class="col-9">Duverné, T., Rougnant, T., Le Yondre, F., Berton, F., Bruneau, J., Zibrek, K., Pettré, J., Hoyet, L., Olivier, AH. (2020). Effect of Social Settings on Proxemics During Social Interactions in Real and Virtual Conditions. International Conference on Virtual Reality and Augmented Reality, 3-19.</p>
@@ -236,6 +245,13 @@ padding: 0px 20px 0px 0px;
 	<h3><span class="line-center">Posters and Workshops</span></h3>
 	</div>
 
+	<a class="pictures"><img src="img/Iana.png" width="100" height="50"></a>	   
+    <p class="col-9">Podkosova, I., Zibrek, K., Pettré, J., Hoyet, L., & Olivier, A. H. (2021). Exploring behaviour towards avatars and agents in immersive virtual environments with mixed-agency interactions. In 2021 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW) (pp. 140-143). IEEE.</p>
+	<a class="pdf" href="http://people.rennes.inria.fr/Ludovic.Hoyet/Documents/Articles/2021_Podkosova.pdf">PDF</a></p>
+	
+	<a class="pictures"><img src="img/IF.png" width="100" height="50"></a>	   
+    <p class="col-9">Colas, A., van Toll, W., Hoyet, L., Pacchierotti, C., Christie, M., Zibrek, K., ... & Pettré, J. (2020). Interaction Fields: Sketching Collective Behaviours. In MIG 2020: Motion, Interaction, and Games.</p>
+	<a class="pdf" href="https://hal.inria.fr/hal-02969013/document">PDF</a></p>
 
 	<a class="pictures"><img src="img/IEEEVR_1_2020.png" width="100" height="50"></a>	   
     <p class="col-9">Zibrek, K., Niay, B. Olivier, AH, Hoyet, L., Pettre, J. and McDonnell, R. (2020). Walk this way: Evaluating the effect of perceived gender and attractiveness of motion on proximity in virtual reality. 2020 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW), Atlanta, GA, USA, pp. 169-170.</p>
