--- a/publications.html
+++ b/publications.html
@@ -145,7 +145,7 @@ padding: 0px 20px 0px 0px;
   <a href="index.html">HOME</a>
   <a href="About.html">ABOUT</a>
   <a class="active" href="publications.html">PUBLICATIONS</a>
-  <s class="active" href="https://twitter.com/KatjaZia"><img src="img/Twitt.png"></s>
+  <s class="social"><img src="img/Twitt.png" href="https://twitter.com/KatjaZia"></s>
   <s class="social" href=""><img src="img/youtube.png"></s>
 </div>
 
