--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ padding: 0px 50px 0px 0px;
   <a class="active" href="index.html">HOME</a>
   <a href="About.html">ABOUT</a>
   <a href="publications.html">PUBLICATIONS</a>
-  <s class="social" href="https://twitter.com/KatjaZia"><img src="img/Twitt.png"></s>
-  <s class="social" href=""><img src="img/youtube.png"></s>
+<!--  <s class="social" href="https://twitter.com/KatjaZia"><img src="img/Twitt.png"></s>
+  <s class="social" href=""><img src="img/youtube.png"></s>-->
 </div>
 
 <div class="content">
